--- a/example/src/Field/index.css
+++ b/example/src/Field/index.css
@@ -1,34 +1,38 @@
 
-.item-warp {
+.form-item-warp {
   display: flex;
   flex-direction: column;
   margin-bottom: 10px;
 }
 
-.item {
+.form-item {
   display: flex;
 }
 
-.default-layout, .vertical {
+.form-default-layout, .form-vertical {
   flex-direction: column;
-  .item-label {
+  .form-item-label {
     padding-bottom: 8px;
   }
 }
 
-.horizontal {
+.form-horizontal {
   flex-direction: row;
-  .item-label {
+  .form-item-label {
     padding-right: 12px;
   }
 }
 
+.form-hidden {
+  display: none !important;
+}
+
 :global {
-  .layout-horizontal {
+  .form-layout-horizontal {
     :local {
-      .default-layout  {
+      .form-default-layout  {
         flex-direction: row;
-        .item-label {
+        .form-item-label {
           padding-bottom: 0;
           padding-right: 12px;
         }
@@ -49,14 +53,14 @@
   }
 }
 
-.error-warp {
-  .error {
+.form-error-warp {
+  .form-error {
     color: #fc685e;
     animation: fadeInDown .3s;
   }
 }
 
-.item-label {
+.form-item-label {
   font-size: 14px;
   position: relative;
   display: inline-flex;
